--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=git adddd, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
- check
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quiz App</title>
+    <!-- <script
+      src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"
+      type="module"
+    ></script> -->
+    <!-- <script src="./scripts/script.js" type="module"></script> -->
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <div class="container">
+        <div id="home" class="flex-center flex-column">
+          <h1>Quick Quiz</h1>
+          <a class="btn" href="./pages/quiz.html">LETS START</a>
+          <a class="btn" href="./pages/highScore.html">HIGH SCORE</a>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+    <!-- <script src="./scripts/quiz.js"></script> -->
+  </body>
 </html>
