--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -12,15 +12,12 @@
       <div id="game" class="flex-center flex-column">
         <div class="hud" id="hud">
           <div id="hud-item">
-            <p id="progressText"class="hud-prefix">
+            <p id="progressText" class="hud-prefix">
               Question
             </p>
             <div id="progressBar">
-              <div class="progress-bar-full"></div>
+              <div id="progressBarFull"></div>
             </div>
-            <h1 class="hud-main-text" id="questionCounter">
-              1/3
-            </h1>
           </div>
           <div id="hud-item">
             <p class="hud-prefix">
