--- a/pages/end.html
+++ b/pages/end.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Congrats!</title>
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
   </head>
   <body>
     <div class="container">
       <div id="end" class="flex-center flex-column">
         <h1 id="finalScore"></h1>
-        <form>
-          <input
+        <form class="endpage-form">
+          <input 
+            class="endpage-input"
             type="text"
             name="username"
             id="username"
@@ -23,15 +24,14 @@
             class="btn"
             id="saveScoreBtn"
             onclick="saveHighScore(event)"
-            disabled
           >
             Save
           </button>
         </form>
-        <a class="btn" href="/game.html">Play Again</a>
+        <a class="btn" href="/quiz.html">Play Again</a>
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="end.js"></script>
+    <script src="../scripts/end.js"></script>
   </body>
 </html>
