--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <div id="game" class="flex-center flex-column">
+      <div id="loader"></div>
+      <div id="game" class="flex-center flex-column hidden">
         <div class="hud" id="hud">
           <div id="hud-item">
             <p id="progressText" class="hud-prefix">
