chenged to classic MS DOS terminal

--- a/pages/end.html
+++ b/pages/end.html
@@ -17,7 +17,7 @@
             type="text"
             name="username"
             id="username"
-            placeholder="username"
+            placeholder="Enter your name here ..."
           />
           <button
             type="submit"
@@ -28,10 +28,10 @@
             Save
           </button>
         </form>
-        <a class="btn" href="/quiz.html">Play Again</a>
+        <a class="btn" href="./quiz.html">Play Again</a>
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="../scripts/end.js"></script>
+    <script src="../scripts/end.js" type="module"></script>
   </body>
 </html>
