--- a/pages/highScore.html
+++ b/pages/highScore.html
@@ -15,6 +15,7 @@
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="../scripts/highScores.js"></script>
+    <script src="../scripts/highScores.js" type="module"></script>
+
   </body>
 </html>
