Scores on Local storage working now

--- a/pages/end.html
+++ b/pages/end.html
@@ -29,9 +29,10 @@
           </button>
         </form>
         <a class="btn" href="./quiz.html">Play Again</a>
+        <a class="btn" href="./highScore.html">High Scores</a>
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="../scripts/end.js" type="module"></script>
+    <script src="../scripts/end.js"></script>
   </body>
 </html>
