--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <div class="container">
         <div id="home" class="flex-center flex-column">
-          <h1>FUN WITH FLAGS</h1>
+          <h1>DO YOU KNOW IT ALL ...</h1>
           <a class="btn" href="./pages/quiz.html">LETS START</a>
           <a class="btn" href="./pages/highScore.html">HIGH SCORE</a>
         </div>
