--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <!-- <script
-      src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"
-      type="module"
-    ></script> -->
-    <!-- <script src="./scripts/script.js" type="module"></script> -->
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
@@ -24,6 +19,6 @@
       </div>
     </main>
     <footer></footer>
-    <!-- <script src="./scripts/quiz.js"></script> -->
+    <script src="./scripts/quiz.js"></script>
   </body>
 </html>
