review Page connected and some styling added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <h1>DO YOU KNOW IT ALL ...</h1>
           <a class="btn" href="./pages/quiz.html">LETS START</a>
           <a class="btn" href="./pages/highScore.html">HIGH SCORE</a>
+          <a class="btn" href="./pages/reviews.html">REVIEWS</a>
         </div>
       </div>
     </main>
