--- a/pages/highScore.html
+++ b/pages/highScore.html
@@ -13,6 +13,7 @@
         <h1 id="finalScore">High Scores</h1>
         <ul id="highScoresList"></ul>
         <a class="btn" href="/">Go Home</a>
+        <a class="btn" href="./reviews.html">REVIEWS</a>
       </div>
     </div>
     <script src="../scripts/highScores.js"></script>
