--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -2,18 +2,25 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../styles/styles.css" />
   </head>
   <body>
-    <main>
+    <main class="reviews-main-page">
       <h1>Reviews</h1>
-      <div>
-        <input type="text" placeholder="Your review" id="review" required/>
-        <input type="text" placeholder="Name" id="name" required/>
-        <input type="email" placeholder="email" id="email" required/>
-        <button id="addReview">ADD</button>
+      <div class="reviews-input-container">
+        <div>
+          <input type="text" placeholder="Your review" id="review" required />
+          <div>
+            <input type="text" placeholder="Name" id="name" required />
+            <input type="email" placeholder="email" id="email" required />
+          </div>
+        </div>
+        <button class="btn" id="addReview">ADD</button>
+        <a class="btn" href="/">GO HOME</a>
       </div>
-
-      <ul id="listOfReviews"></ul>
+      <div class="card-container">
+        <ul id="listOfReviews"></ul>
+      </div>
     </main>
 
     <script
