--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Page</title>
     <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   </head>
   <body>
     <div class="container">
@@ -30,19 +31,19 @@
           </div>
         </div>
         <h2 id="question"></h2>
-        <div class="choice-container">
+        <div class="animate__animated animate__fadeInLeft animate__faster choice-container">
           <p class="choice-prefix">A</p>
           <p class="choice-text" data-number="1">Choice 1</p>
         </div>
-        <div class="choice-container">
+        <div class="animate__animated animate__fadeInLeft animate__fast choice-container">
           <p class="choice-prefix">B</p>
           <p class="choice-text" data-number="2">Choice 2</p>
         </div>
-        <div class="choice-container">
+        <div class="animate__animated animate__fadeInLeft animate__slow choice-container">
           <p class="choice-prefix">C</p>
           <p class="choice-text" data-number="3">Choice 3</p>
         </div>
-        <div class="choice-container">
+        <div class="animate__animated animate__fadeInLeft  choice-container">
           <p class="choice-prefix">D</p>
           <p class="choice-text" data-number="4">Choice 4</p>
         </div>
